@@ -109,6 +109,9 @@ public class Gutter extends JComponent implements SwingConstants
 		int lineHeight = textArea.getPainter().getFontMetrics()
 			.getHeight();
 
+		if(lineHeight == 0)
+			return;
+
 		int firstLine = clip.y / lineHeight;
 		int lastLine = (clip.y + clip.height - 1) / lineHeight;
 
@@ -914,7 +917,11 @@ public class Gutter extends JComponent implements SwingConstants
 		{
 			if(isMarkerHighlightEnabled())
 			{
-				int line = y / textArea.getPainter().getFontMetrics().getHeight();
+				int lineHeight = textArea.getPainter().getFontMetrics().getHeight();
+				if(lineHeight == 0)
+					return null;
+
+				int line = y / lineHeight;
 				int start = textArea.getScreenLineStartOffset(line);
 				int end = textArea.getScreenLineEndOffset(line);
 				if(start == -1 || end == -1)
